tests/invalid/field_empty_dict_wrong_type/main.py
class Foo:
    x: int

    def __init__(self) -> None:
        self.x = {}


def run_case() -> None:
    Foo()


if __name__ == "__main__":
    run_case()
